--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.hostello">
+
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
@@ -16,11 +19,13 @@
         <activity
             android:name=".OtpActivity"
             android:exported="false" />
+        <!--        TermsOfUse ACTIVITY-->
         <activity
             android:name=".TermsOfUse"
             android:exported="false"
             android:theme="@style/Theme.Hostello" />
          <!-- Splash Screen Activity -->
+        <!--        Main ACTIVITY-->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -59,10 +64,12 @@
             android:name=".HomeActivity"
             android:exported="false"
             android:theme="@style/Theme.Hostello" />
+        <!--        MainHome ACTIVITY-->
         <activity
             android:name=".MainHomeActivity"
             android:exported="false"
             android:theme="@style/Theme.Hostello" />
+<!--        Notification activity-->
     </application>
 
 </manifest>
