--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.hostello">
 
+    <uses-feature
+        android:name="android.hardware.telephony"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
     <uses-permission android:name="android.permission.CALL_PHONE"/>
 
@@ -71,6 +75,10 @@
             android:exported="false"
             android:theme="@style/Theme.Hostello" />
 <!--        Notification activity-->
+        <activity
+            android:name=".NotificationDetailActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Hostello" />
     </application>
 
 </manifest>
