--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -80,6 +80,10 @@
             android:name=".NotificationDetailActivity"
             android:exported="false"
             android:theme="@style/Theme.Hostello" />
+        <activity
+            android:name=".HostelSeeder"
+            android:exported="false"
+            android:theme="@style/Theme.Hostello" />
     </application>
 
 </manifest>
