--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,10 @@
         android:name="android.hardware.telephony"
         android:required="false" />
 
-    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
-
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission
+        android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="32" />
 
     <application
@@ -19,68 +19,60 @@
         android:roundIcon="@drawable/host_logo_02"
         android:supportsRtl="true"
         android:theme="@style/Theme.Hostello">
-<!--        -->
-
-        <!--        OTP ACTIVITY-->
+        <activity
+            android:name=".HostelDetailActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Hostello" />
+        <!-- OTP ACTIVITY -->
         <activity
             android:name=".OtpActivity"
-            android:exported="false" />
-        <!--        TermsOfUse ACTIVITY-->
+            android:exported="false" /> <!-- TermsOfUse ACTIVITY -->
         <activity
             android:name=".TermsOfUse"
             android:exported="false"
-            android:theme="@style/Theme.Hostello" />
-         <!-- Splash Screen Activity -->
-        <!--        Main ACTIVITY-->
+            android:theme="@style/Theme.Hostello" /> <!-- Splash Screen Activity -->
+        <!-- Main ACTIVITY -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!-- Intro Activity -->
+        </activity> <!-- Intro Activity -->
         <activity
             android:name=".intro"
             android:exported="false"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
-        <!-- Buy or Sell Activity -->
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" /> <!-- Buy or Sell Activity -->
         <activity
             android:name=".buy_or_sell"
-            android:exported="false" />
-        <!-- Phone Number Activity -->
+            android:exported="false" /> <!-- Phone Number Activity -->
         <activity
             android:name=".PhoneNumber"
             android:exported="false"
-            android:theme="@style/Theme.Hostello" />
-        <!-- Owner Activity -->
+            android:theme="@style/Theme.Hostello" /> <!-- Owner Activity -->
         <activity
             android:name=".OwnerActivity"
             android:exported="false"
-            android:theme="@style/Theme.Hostello" />
-        <!-- OwnerRegistrationActivity -->
+            android:theme="@style/Theme.Hostello" /> <!-- OwnerRegistrationActivity -->
         <activity
             android:name=".OwnerRegistrationActivity"
             android:exported="false"
-            android:theme="@style/Theme.Hostello" />
-        <!-- Home Activity -->
+            android:theme="@style/Theme.Hostello" /> <!-- Home Activity -->
         <activity
             android:name=".HomeActivity"
             android:exported="false"
-            android:theme="@style/Theme.Hostello" />
-        <!--        MainHome ACTIVITY-->
+            android:theme="@style/Theme.Hostello" /> <!-- MainHome ACTIVITY -->
         <activity
             android:name=".MainHomeActivity"
             android:exported="false"
-            android:theme="@style/Theme.Hostello" />
-<!--        Notification activity-->
+            android:theme="@style/Theme.Hostello" /> <!-- Notification activity -->
         <activity
             android:name=".NotificationDetailActivity"
             android:exported="false"
             android:theme="@style/Theme.Hostello" />
-
     </application>
 
 </manifest>
