Add owner dashboard and update registration flow
Introduces OwnerDashboardActivity with navigation and UI, adds fragments for owner onboarding, and updates the owner registration activity and layout to directly save hostel data to the database. Refactors Hostel model for Room compatibility, improves TermsOfUse logic and UI, and updates ProfileFragment to support owner navigation. Adds new layouts and navigation graph for owner dashboard.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Hostello">
         <activity
-            android:name=".HostelDetailActivity"
+            android:name=".OwnerDashboardActivity"
             android:exported="false"
             android:theme="@style/Theme.Hostello" />
-        <!-- OTP ACTIVITY -->
+        <activity
+            android:name=".HostelDetailActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Hostello" /> <!-- OTP ACTIVITY -->
         <activity
             android:name=".OtpActivity"
             android:exported="false" /> <!-- TermsOfUse ACTIVITY -->
