--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:exported="false"
             android:theme="@style/Theme.Hostello" />
         <activity
+            android:name=".OwnerDocumentSubmissionActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Hostello" />
+        <activity
             android:name=".OwnerDashboardActivity"
             android:exported="false"
             android:theme="@style/Theme.Hostello" />
