Refactor hostel registration and UI, remove unused fragments
Replaces and refactors the owner registration and document submission flows, consolidating UI into a single, modernized layout and updating Java logic to match new field IDs. Removes unused FirstFragment, First2Fragment, and First3Fragment and their layouts. Updates HostelAdapter and HostelDetailActivity to use Glide for image loading and simplifies data handling. Adds new gradient drawable resources for improved UI. Cleans up homefragment and improves database seeding and adapter logic.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,8 @@ recyclerview = "1.4.0"
 swiperefreshlayout = "1.2.0"
 navigationFragment = "2.6.0"
 navigationUi = "2.6.0"
+glide = "4.16.0"
+room = "2.6.1"
 
 [libraries]
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -27,7 +29,12 @@ recyclerview = { group = "androidx.recyclerview", name = "recyclerview", version
 swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version.ref = "swiperefreshlayout" }
 navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
+glide = { group = "com.github.bumptech.glide", name = "glide", version.ref = "glide" }
+glide-compiler = { group = "com.github.bumptech.glide", name = "compiler", version.ref = "glide" }
 
+# Room Database (Essential for your AppDatabase to work)
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room" }
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
