Add edit hostel feature and redesign owner dashboard
Introduces EditHostelActivity for editing hostel details, including new activity and layout files, and updates the manifest. OwnerDashboardActivity and its layout are refactored to use MaterialCardView-based grid actions and improved statistics display, with navigation to the new edit screen. Removes unused SecondFragment, Second2Fragment, and Second3Fragment and their layouts. ProfileFragment and its layout are modernized, and the search fragment UI is enhanced for better user experience.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Hostello">
         <activity
+            android:name=".EditHostelActivity"
+            android:exported="false"
+            android:theme="@style/Theme.Hostello" />
+        <activity
             android:name=".ManageBookingsActivity"
             android:exported="false"
             android:theme="@style/Theme.Hostello" />
